welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: expected start of definition
override def run() {
         ^SnakeBuggle:33: error: Unmatched closing brace '}' ignored here
}
^